--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mongoose": "^5.12.1"
   },
   "engines": {
-    "node": "12.x"
+    "node": "12.13.0"
   },
   "author": "Kim Maida",
   "repository": {
