--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rota-slackbot",
-  "version": "0.2.0",
-  "description": "Slack rotation management bot",
+  "name": "landtech-rota",
+  "version": "0.5.0",
+  "description": "Slack rotation management bot for Land Tech",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
